--- a/conf/application.conf
+++ b/conf/application.conf
@@ -276,7 +276,7 @@ play.filters {
     #permittedCrossDomainPolicies = "master-only"
 
     # The Content-Security-Policy header. If null, the header is not set.
-    #contentSecurityPolicy = "default-src 'self'"
+    contentSecurityPolicy = "script-src 'self'"
   }
 
   ## Allowed hosts filter configuration
@@ -350,4 +350,15 @@ db {
   # You can turn on SQL logging for any datasource
   # https://www.playframework.com/documentation/latest/Highlights25#Logging-SQL-statements
   #default.logSql=true
+}
+
+slick.dbs.default {
+  profile="utils.db.PostgresDriver$"
+  db {
+    driver = org.postgresql.Driver
+    url = "jdbc:postgresql://127.0.0.1/provest"
+    user = "provest"
+    password = ""
+    keepAliveConnection = true
+  }
 }
